# quantum-trading-platform

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INICIO_PROYECTO.md  INTEGRATION_STATUS.md  Makefile  README.md  REAL_STATUS.md  ROADMAP.md  TESTING_STRATEGY.md  check_imports.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  upload_to_github.sh
.github/workflows/: automated-trading.yml  ci-cd-pipeline.yml
config/: exchanges.json
contracts/: FlashLoanArbitrage.sol
examples/: backtest_example.py  exchange_demo.py
frontend/dashboard/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/dashboard/src/: App.css  App.tsx  index.css
migrations/: 001_initial_schema.sql  002_auth_schema.sql
quantum_venv/: pyvenv.cfg
requirements/: base.txt  development.txt  test.txt
scripts/: init_auth.py  init_database.py  run_integration.py  setup.sh  setup_env.sh  test_binance_connection.py  test_connections.py
src/: __init__.py  api.py  main.py
src/agents/: __init__.py  base.py  orchestrator.py  risk.py  sentiment.py  technical.py
src/analytics/: __init__.py  dashboard.py  metrics_calculator.py  performance_analyzer.py  portfolio_analytics.py  report_generator.py  risk_analytics.py  trade_analytics.py
src/api/: __init__.py  app.py  websocket.py
src/api/routers/: trading.py
src/arbitrage/: __init__.py  mev_flash_loan_engine.py
src/auth/: __init__.py  api.py  dependencies.py  jwt_handler.py  middleware.py  models.py  repository.py  service.py
src/backtesting/: __init__.py  data_provider.py  engine.py  event_simulator.py  execution_simulator.py  performance_analyzer.py  portfolio_simulator.py
src/core/: __init__.py  config.py  database.py  logging.py
src/core/architecture/: __init__.py  base_repository.py  circuit_breaker.py  dependency_injection.py  event_bus.py  factory_registry.py  rate_limiter.py  unit_of_work.py
src/core/cache/: __init__.py  cache_manager.py  decorators.py
src/core/configuration/: __init__.py  config_manager.py  models.py
src/core/factories/: __init__.py  exchange_factory.py  strategy_factory.py
src/exchange/: __init__.py  binance_exchange.py  exchange_interface.py  exchange_manager.py
src/exchanges/: README.md  __init__.py  base.py  binance_connector.py  coinbase_connector.py  factory.py  kraken_connector.py  manager.py
src/intelligence/: social_media_engine.py
src/market_data/: __init__.py  aggregator.py  collector.py  distributor.py  normalizer.py  quality_checker.py  storage.py
src/orders/: __init__.py  execution_algorithms.py  order_manager.py  slippage_model.py
src/positions/: __init__.py  portfolio_manager.py  position_tracker.py
src/risk/: __init__.py  risk_manager.py  risk_models.py  stop_loss_manager.py
src/strategies/: __init__.py  ai_strategy.py  arbitrage.py  base.py  mean_reversion.py  momentum.py  strategy_manager.py
src/trading/: __init__.py  engine.py  execution_algorithms.py  fifo_calculator.py  market_impact.py  models.py  order_lifecycle.py  order_manager.py  portfolio_optimizer.py  position_manager.py  risk_checks.py  risk_manager.py  var_calculator.py
tests/: __init__.py  conftest.py  test_api_module.py  test_data_module.py  test_exchanges.py  test_imports.py  test_mev_flash_loan_engine.py  test_settings.py  test_trading_engine.py
tests/integration/: test_exchange_integration.py
tests/unit/core/: README.md  (+6 more)
(+30 files in other folders)
